--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  
+  <!-- Version meta tag -->
+  <meta name="version" content="1.1.0">
   <!-- PWA Meta Tags -->
   <meta name="application-name" content="RealTime Chat">
   <meta name="apple-mobile-web-app-capable" content="yes">
